<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".MainActivity">

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/soft_pink"
        android:alpha="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="-50dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/headerGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/deep_pink"
                    android:textSize="48sp"
                    android:fontFamily="serif"
                    android:textStyle="italic"
                    android:letterSpacing="0.2" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:background="@color/powder_pink"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="8dp"
                app:layout_constraintDimensionRatio="4:5"
                app:layout_constraintTop_toBottomOf="@id/headerGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/mainImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/beauty_products" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="bottom"
                        android:background="#CCFFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:text="@string/welcome_image_caption"
                        android:textColor="@color/deep_pink"
                        android:textStyle="italic"
                        android:fontFamily="serif" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/main_title"
                android:textColor="@color/slate_800"
                android:textSize="22sp"
                android:fontFamily="serif"
                app:layout_constraintTop_toBottomOf="@id/imageCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/footerGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@id/mainTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:text="@string/btn_start"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:fontFamily="serif"
                    android:textStyle="italic"
                    android:textColor="@color/slate_800"
                    android:backgroundTint="@color/powder_pink"
                    app:cornerRadius="20dp" />

                <TextView
                    android:id="@+id/btnLoginLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/login_link"
                    android:textColor="@color/slate_400"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>